--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "https://AlizaAzmat/github.io/OchiReact",
   "name": "ochi",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,7 +14,9 @@
   },
   "dependencies": {
     "framer-motion": "^11.1.9",
+    "gh-pages": "^6.1.1",
     "gsap": "^3.12.5",
+    "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
